Updating storage replication types and minor changes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,7 @@
       "source.formatAll.terraform": true
     },
   },
-  "git.enableCommitSigning": true,
+  "git.enableCommitSigning": false,
   "[terraform][terraform-vars]": {
     "editor.codeActionsOnSave": {
       "source.formatAll.terraform": "explicit"
