--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,35 @@ override.tf.json
 terraform.rc
 avmmakefile
 README-generated.md
+
+
+**/override.tf
+
+.tflint.hcl
+.tflint_example.hcl
+
+tfmod-scaffold/
+scripts
+
+test/go.sum
+
+TestRecord/
+**/TestRecord.md.tmp
+**/.terraform/*
+*.tfstate.*
+*.tfvars.json
+*_override.tf
+*_override.tf.json
+*tfplan*
+.terraform.lock.hcl
+.terraformrc
 avm.tflint.hcl
+avm.tflint.merged.hcl
 avm.tflint_example.hcl
+avm.tflint_example.merged.hcl
+avmmakefile
+crash.*.log
+crash.log
+override.tf
+override.tf.json
+terraform.rc
