Update description of  azure_files_authentication variable.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
   "recommendations": [
-    "hashicorp.terraform",
     "EditorConfig.EditorConfig",
+    "hashicorp.terraform",
+    "ms-azurertools.vscode-azureterraform"
   ]
 }
